Remove Hadrien Vassille from username

--- a/instagram.html
+++ b/instagram.html
@@ -104,7 +104,7 @@
               access_token: "to be completed",
               // "your Instagram access token that you can get here:http://instagram.pixelunion.net/"
               url: "https://api.instagram.com/v1/users/self/media/recent/",
-              username: "hadrienvassille",
+              username: "",
               grams: [],
               next_url: "",
               error: false
